installed copy of paper toast -- creating seperate branch to try the script loader approach

--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "paper-toast": "PolymerElements/paper-toast#~1.0.0"
+  }
 }
